--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile files('libs/okhttp-3.2.0.jar')
+    compile files('src/libs/okhttp-3.2.0.jar')
+    compile files('src/libs/okio-1.8.0.jar')
 }
