--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.okio:okio:1.14.1'
     implementation 'com.alibaba:fastjson:1.2.58'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
